--- a/app/src/main/res/layout/mock_solution_card_layout.xml
+++ b/app/src/main/res/layout/mock_solution_card_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/medium_margin"
-    android:layout_marginTop="@dimen/large_margin"
+    android:layout_marginTop="@dimen/medium_margin"
     app:cardBackgroundColor="@color/card_background"
     app:cardCornerRadius="16dp">
 
@@ -19,7 +19,7 @@
             android:id="@+id/tvQuestionCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/dm_sans_medium"
+            android:fontFamily="@font/dm_sans_bold"
             android:paddingVertical="@dimen/small_padding"
             android:text="Question 1"
             android:textColor="@color/text_color"
@@ -33,7 +33,7 @@
             android:paddingVertical="@dimen/small_padding"
             android:text="Which one is the right method for writing various data types of Object OutputStream class?"
             android:textColor="@color/text_color"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/llOptionOneContainer"
@@ -46,12 +46,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:text="A."
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -61,11 +61,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/tvOptionOneHeader"
                 app:layout_constraintRight_toRightOf="parent"
@@ -83,12 +83,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:text="B."
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -98,11 +98,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/tvOptionTwoHeader"
                 app:layout_constraintRight_toRightOf="parent"
@@ -122,12 +122,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:text="C."
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -137,11 +137,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/tvOptionThreeHeader"
                 app:layout_constraintRight_toRightOf="parent"
@@ -161,12 +161,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:text="D."
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -176,11 +176,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_margin="@dimen/small_margin"
                 android:fontFamily="@font/dm_sans_medium"
                 android:padding="@dimen/small_padding"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/tvOptionFourHeader"
                 app:layout_constraintRight_toRightOf="parent"
@@ -196,7 +196,7 @@
             android:fontFamily="@font/dm_sans_regular"
             android:padding="@dimen/small_padding"
             android:textColor="@color/text_color"
-            android:textSize="18sp"
+            android:textSize="14sp"
             tools:text="writeObject(Object x) is the right method for writing various data types of Object OutputStream class" />
 
     </LinearLayout>
