--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,12 +24,13 @@
                 android:id="@+id/tvWelcomeHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:layout_marginStart="@dimen/medium_margin"
                 android:ellipsize="end"
                 android:fontFamily="@font/dm_sans_bold"
                 android:maxWidth="250dp"
                 android:maxLines="2"
-                android:text="Hello \nKrish Parekh"
+                tools:text="Hello \nKrish Parekh"
                 android:textColor="@color/text_color"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +42,8 @@
                 android:id="@+id/ivProfileImage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="@dimen/medium_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:layout_marginEnd="@dimen/medium_margin"
                 android:src="@drawable/ic_image_picker"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -109,8 +111,8 @@
 
                     <ImageView
                         android:id="@+id/ivCompanies"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginVertical="@dimen/small_margin"
                         android:adjustViewBounds="true"
                         android:contentDescription="@null"
@@ -120,7 +122,7 @@
                         android:id="@+id/tvCompaniesCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/medium_margin"
+                        android:layout_marginVertical="@dimen/small_margin"
                         android:fontFamily="@font/dm_sans_bold"
                         android:text="0"
                         android:textAlignment="center"
@@ -165,8 +167,8 @@
 
                     <ImageView
                         android:id="@+id/ivJobApplied"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginVertical="@dimen/small_margin"
                         android:adjustViewBounds="true"
                         android:contentDescription="@null"
@@ -176,7 +178,7 @@
                         android:id="@+id/tvJobAppliedCount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/medium_margin"
+                        android:layout_marginVertical="@dimen/small_margin"
                         android:fontFamily="@font/dm_sans_bold"
                         android:text="0"
                         android:textAlignment="center"
