--- a/app/src/main/res/layout/tpo_card_layout.xml
+++ b/app/src/main/res/layout/tpo_card_layout.xml
@@ -36,7 +36,7 @@
             android:fontFamily="@font/dm_sans_bold"
             android:maxLines="1"
             android:textColor="@color/text_color"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/ivProfileTpo"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/extra_small_margin"
             android:ellipsize="end"
             android:fontFamily="@font/dm_sans_regular"
             android:textColor="@color/subheading_color"
